# LabInventory

./: 2.0.1  AGENTS.md  BoM报价-立创_20260212.xls  BoM报价-立创_20260212.xlsx  C409物料管理说明.docx  PLAMS.md  PLAN.md  README.md  README_project_resources.md  activate_pytorch_gpu.bat  import_bom.py  inv.py  lab_inventory.db  lab_inventory.db-journal  lcsc_to_db.py  locations_init.csv  parts_data.txt  pyproject.toml  script_name.py  命令.txt
app/: __init__.py  api.py  core.py  db.py  inv.py  project_resources.py  schemas.py
backend/: __init__.py
backend/app/: __init__.py  api.py  core.py  db.py  inv.py
data/reference/: project_resources_template.csv
docs/: schema_after.sql  schema_before.sql  命令.txt  项目出入库单自动填写说明.md
frontend/: __init__.py  streamlit_app.py
schema/: locations.json  parts.json  project_bom.json  projects.json  sqlite_sequence.json  v_project_material_status.json
scripts/: __init__.py  import_bom.py  import_log.txt  pro_exp.py  smoke_test_ledger.py
ui/: streamlit_app.py
