[tool.poetry]
name = "labinventory"
version = "0.1.0"
description = "LabInventory SQLite CLI + FastAPI + Streamlit"
authors = ["LabInventory Team"]
readme = "README.md"
packages = [
  { include = "backend" },
  { include = "frontend" },
  { include = "app" },
  { include = "ui" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
requests = "^2.32.0"
beautifulsoup4 = "^4.12.3"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.11.7"
streamlit = "^1.48.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
